# konnect

./: LICENSE  README.md  README_EN.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: debug.rs  lib.rs  main.rs
src-tauri/src/config/: commands.rs  mod.rs  storage.rs
src-tauri/src/models/: connection.rs  mod.rs
src-tauri/src/sftp/: commands.rs  mod.rs  session.rs
src-tauri/src/ssh/: commands.rs  mfa.rs  mod.rs  session.rs
src-tauri/src/terminal/: commands.rs  mod.rs  pty_manager.rs
src/components/: ConnectionDialog.tsx  MfaDialog.tsx  SftpExplorer.tsx  Terminal.tsx
src/store/: terminalStore.ts
src/types/: connection.ts  mfa.ts  sftp.ts  terminal.ts
