[package]
name = "konnect"
version = "0.1.0"
description = "Konnect - A lightweight, modern terminal tool"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "konnect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.35", features = ["full"] }
portable-pty = "0.8"
russh = "0.56"
russh-sftp = "2.0"
telnet = "0.2"
serialport = "4.2"
suppaftp = { version = "5.3", features = ["async-trait"] }
toml = "0.8"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
tauri-plugin-dialog = "2.5.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
